--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/waritsan/shopee-flash-sale-tracker/issues"
   },
-  "homepage": "https://github.com/waritsan/shopee-flash-sale-tracker#readme"
+  "homepage": "https://github.com/waritsan/shopee-flash-sale-tracker#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.88.0"
+  }
 }
