--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/waritsan/shopee-flash-sale-tracker#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
     "fuse.js": "^3.4.4",
     "level": "^5.0.1",
     "nodemailer": "^6.1.1",
