Change main entry point to app.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopee-flash-sale-tracker",
   "version": "1.0.0",
   "description": "Scrape the Shopee Flash Sale page and send alert when a desired item goes on sale.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
