--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/waritsan/shopee-flash-sale-tracker#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cron": "^1.7.1",
     "express": "^4.16.4",
     "fuse.js": "^3.4.4",
     "level": "^5.0.1",
