--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "fuse.js": "^3.4.4",
     "level": "^5.0.1",
+    "mongoose": "^5.5.7",
     "nodemailer": "^6.1.1",
     "request": "^2.88.0"
   }
